--- a/public/backups.html
+++ b/public/backups.html
@@ -47,7 +47,7 @@
       <button class="btn btn-primary" onclick="createBackup()">📥 إنشاء نسخة احتياطية</button>
       <button class="btn btn-danger" onclick="deleteSelected()">🗑️ حذف المحدد</button>
 
-      <!-- ✅ زر رفع نسخة -->
+      <!-- ✅ زر رفع نسخة. -->
       <form id="uploadForm" enctype="multipart/form-data" class="d-flex gap-2">
         <input type="file" id="backupFile" name="backupFile" accept=".json" class="form-control">
         <button type="submit" class="btn btn-success">📤 رفع نسخة</button>
