--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -27,180 +27,155 @@
       from { text-shadow: 0 0 5px #0d6efd; }
       to { text-shadow: 0 0 15px #0d6efd; }
     }
-    .page-icon {
-      display: block;
-      margin: 0 auto 15px auto;
-      max-height: 120px;
-    }
-    /* شريط علوي مثبت */
-    .top-bar {
-      position: fixed;
-      top: 0;
-      right: 0;
-      width: 100%;
-      background: #0d6efd;
-      padding: 10px;
-      text-align: right;
-      z-index: 1000;
-    }
     .container {
       margin-top: 70px;
+    }
+    /* تحسين حالة Hover */
+    .navbar-nav .nav-link {
+      transition: color 0.3s ease, background 0.3s ease;
+      padding: 8px 12px;
+      border-radius: 5px;
+    }
+    .navbar-nav .nav-link:hover {
+      background: rgba(255, 255, 255, 0.15);
+    }
+    .navbar-nav .nav-link::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      left: 0;
+      bottom: 0;
+      background: white;
+      transition: width 0.3s ease;
+    }
+    .navbar-nav .nav-link:hover::after,
+    .navbar-nav .nav-link.active::after {
+      width: 100%;
+    }
+    .scrolled {
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2) !important;
+    }
+    /* الوضع الليلي */
+    body.dark-mode {
+      background: #121212 !important;
+      color: #eaeaea !important;
+    }
+    body.dark-mode nav {
+      background: linear-gradient(to right, #222, #000) !important;
+    }
+    body.dark-mode table {
+      background-color: #1e1e1e;
+      color: #eaeaea;
+    }
+    body.dark-mode thead {
+      background-color: #333 !important;
+      color: #fff !important;
+    }
+    body.dark-mode .table-bordered td,
+    body.dark-mode .table-bordered th {
+      border-color: #444 !important;
+    }
+    body.dark-mode footer {
+      color: #bbb;
+      animation: none;
     }
   </style>
 </head>
 <body>
- <!--  القائمة -->
-<!-- استدعاء مكتبة Bootstrap Icons -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
+<!-- القائمة -->
 <nav id="mainNavbar" class="navbar navbar-expand-lg sticky-top shadow-sm" 
      style="background: linear-gradient(to right, #0d6efd, #0b5ed7); transition: box-shadow 0.3s ease;">
   <div class="container-fluid">
-    
-    <!-- الروابط -->
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link text-white fw-semibold position-relative" 
-   href="https://video-dashboard-backend.onrender.com">
-   <i class="bi bi-house-door-fill fs-5"></i> الرئيسية
-</a>
-
+             href="https://video-dashboard-backend.onrender.com">
+             <i class="bi bi-house-door-fill fs-5"></i> الرئيسية
+          </a>
         </li>
       </ul>
     </div>
-
-    <!-- العنوان -->
     <a class="navbar-brand text-white fw-bold ms-auto d-flex align-items-center" href="#">
       <i class="bi bi-collection-play-fill fs-4 me-1"></i> Video Dashboard
     </a>
-
-    <!-- زر القائمة للجوال -->
     <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <!-- زر الوضع ليلي/نهاري -->
     <button id="themeToggle" class="btn btn-sm btn-outline-light ms-2">
       <i class="bi bi-moon-stars-fill"></i>
     </button>
   </div>
 </nav>
 
-<style>
-  /* تحسين حالة Hover */
-  .navbar-nav .nav-link {
-    transition: color 0.3s ease, background 0.3s ease;
-    padding: 8px 12px;
-    border-radius: 5px;
-  }
-  .navbar-nav .nav-link:hover {
-    background: rgba(255, 255, 255, 0.15);
-  }
+<div class="container mt-4 text-center">
 
-  /* خط متحرك تحت الروابط */
-  .navbar-nav .nav-link::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 2px;
-    left: 0;
-    bottom: 0;
-    background: white;
-    transition: width 0.3s ease;
-  }
-  .navbar-nav .nav-link:hover::after,
-  .navbar-nav .nav-link.active::after {
-    width: 100%;
-  }
-
-  /* ظل يظهر عند التمرير */
-  .scrolled {
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2) !important;
-  }
-
-  /* الوضع الليلي */
-  body.dark-mode {
-    background: #121212 !important;
-    color: #eaeaea !important;
-  }
-  body.dark-mode nav {
-    background: linear-gradient(to right, #222, #000) !important;
-  }
-</style>
-
-<script>
-  // إضافة/إزالة الظل عند التمرير
-  window.addEventListener('scroll', function () {
-    const navbar = document.getElementById('mainNavbar');
-    if (window.scrollY > 20) {
-      navbar.classList.add('scrolled');
-    } else {
-      navbar.classList.remove('scrolled');
-    }
-  });
-
-  // تبديل الوضع ليلي/نهاري
-  const themeToggle = document.getElementById('themeToggle');
-  themeToggle.addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-    const icon = themeToggle.querySelector("i");
-    if (document.body.classList.contains("dark-mode")) {
-      icon.classList.replace("bi-moon-stars-fill", "bi-brightness-high-fill");
-    } else {
-      icon.classList.replace("bi-brightness-high-fill", "bi-moon-stars-fill");
-    }
-  });
-</script>
-
-
-
-  <!-- انتهت القائمة -->
-
-
-  <div class="container mt-4 text-center">
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover text-center align-middle">
-        <thead class="table-Primary">
-          <tr>
-            <th>#</th>
-            <th>وصف</th>
-            <th>الرابط</th>
-            <th>محمي؟</th>
-          </tr>
-        </thead>
-        <tbody id="linksTableBody">
-          <tr><td colspan="4">جارٍ التحميل...</td></tr>
-        </tbody>
-      </table>
-    </div>
+  <!-- ✅ شريط البحث -->
+  <div class="mb-3">
+    <input id="searchInput" type="text" class="form-control" placeholder="🔍 ابحث عن وصف أو رابط...">
   </div>
 
-  <footer>برمجة وتطوير: ليث عبيدات</footer>
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover table-striped text-center align-middle">
+      <thead class="table-primary">
+        <tr>
+          <th>#</th>
+          <th>وصف</th>
+          <th>الرابط</th>
+          <th>محمي؟</th>
+        </tr>
+      </thead>
+      <tbody id="linksTableBody">
+        <tr>
+          <td colspan="4">
+            <div class="d-flex justify-content-center align-items-center">
+              <div class="spinner-border text-primary me-2" role="status"></div>
+              <span>جارٍ التحميل...</span>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<footer>برمجة وتطوير: ليث عبيدات</footer>
 
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let linksData = [];
 
+// جلب الروابط من السيرفر
 async function fetchLinks() {
   const res = await fetch(`${API_BASE}/api/links`);
   linksData = await res.json();
+  renderLinks(linksData);
+}
+
+// عرض الروابط في الجدول
+function renderLinks(data) {
   const tbody = document.getElementById('linksTableBody');
   tbody.innerHTML = '';
-  if (!linksData.length) {
-    tbody.innerHTML = '<tr><td colspan="4">لا توجد روابط</td></tr>';
+  if (!data.length) {
+    tbody.innerHTML = '<tr><td colspan="4">🚫 لا توجد روابط</td></tr>';
     return;
   }
-  linksData.forEach((link, index) => {
+  data.forEach((link, index) => {
     const lockIcon = link.requiresPassword 
-      ? '<i class="bi bi-lock-fill text-danger fs-4"></i>'   // قفل أحمر
-      : '<i class="bi bi-unlock-fill text-success fs-4"></i>'; // قفل أخضر
+      ? '<i class="bi bi-lock-fill text-danger fs-4"></i>'
+      : '<i class="bi bi-unlock-fill text-success fs-4"></i>';
 
     const secureLink = link.requiresPassword
       ? `/auth/login?id=${link._id}`
       : `${API_BASE}/api/redirect/${encodeURIComponent(link._id)}`;
 
-    const linkHtml = `<a href="${secureLink}" target="_blank">${link.linkText}</a>`;
+    const linkHtml = `
+      <a href="${secureLink}" target="_blank" class="btn btn-primary btn-sm">
+        <i class="bi bi-box-arrow-up-right"></i> فتح الرابط
+      </a>
+    `;
 
     const tr = document.createElement('tr');
     tr.innerHTML = `
@@ -213,7 +188,39 @@ async function fetchLinks() {
   });
 }
 
+// ✅ فلترة النتائج محليًا
+document.getElementById('searchInput').addEventListener('input', function() {
+  const query = this.value.trim().toLowerCase();
+  const filtered = linksData.filter(link => {
+    return (link.description && link.description.toLowerCase().includes(query)) ||
+           (link.linkText && link.linkText.toLowerCase().includes(query));
+  });
+  renderLinks(filtered);
+});
+
 fetchLinks();
+
+// إضافة/إزالة الظل عند التمرير
+window.addEventListener('scroll', function () {
+  const navbar = document.getElementById('mainNavbar');
+  if (window.scrollY > 20) {
+    navbar.classList.add('scrolled');
+  } else {
+    navbar.classList.remove('scrolled');
+  }
+});
+
+// تبديل الوضع ليلي/نهاري
+const themeToggle = document.getElementById('themeToggle');
+themeToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark-mode');
+  const icon = themeToggle.querySelector("i");
+  if (document.body.classList.contains("dark-mode")) {
+    icon.classList.replace("bi-moon-stars-fill", "bi-brightness-high-fill");
+  } else {
+    icon.classList.replace("bi-brightness-high-fill", "bi-moon-stars-fill");
+  }
+});
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
