--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -87,7 +87,7 @@
       width: 100%;
     }
     .search-wrapper input {
-      padding-inline-end: 32px; /* مساحة للزر */
+      padding-inline-end: 32px;
     }
     #clearSearch {
       position: absolute;
@@ -183,7 +183,7 @@ function renderLinks(data) {
   const tbody = document.getElementById('linksTableBody');
   tbody.innerHTML = '';
   if (!data.length) {
-    tbody.innerHTML = '<tr><td colspan="4">🚫 لا توجد روابط</td></tr>';
+    tbody.innerHTML = '<tr><td colspan="4">🚫 لا توجد نتائج مطابقة</td></tr>';
     return;
   }
   data.forEach((link, index) => {
