--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,32 +7,45 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
     body {
-      background-color: #f0f2f5;
+      background: linear-gradient(to right, #eef2f7, #f9fbfc);
       font-family: 'Segoe UI', sans-serif;
-      padding: 40px;
+      padding: 30px;
+      transition: background 0.3s ease, color 0.3s ease;
     }
     .dashboard-card {
       background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
       text-align: center;
-      transition: transform 0.2s ease;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      height: 100%;
     }
     .dashboard-card:hover {
-      transform: scale(1.02);
+      transform: scale(1.04);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
-    a {
+    .dashboard-card a {
       text-decoration: none;
-      color: #0d6efd;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.15rem;
+      display: block;
+      margin-top: 10px;
     }
     .card-icon {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-      color: #198754;
+      font-size: 2.8rem;
+      margin-bottom: 12px;
     }
+    /* ألوان الأيقونات */
+    .dashboard-card:nth-child(1) .card-icon { color: #0d6efd; } /* أزرق */
+    .dashboard-card:nth-child(2) .card-icon { color: #ffc107; } /* أصفر */
+    .dashboard-card:nth-child(3) .card-icon { color: #dc3545; } /* أحمر */
+    .dashboard-card:nth-child(4) .card-icon { color: #20c997; } /* أخضر فيروزي */
+    .dashboard-card:nth-child(5) .card-icon { color: #6f42c1; } /* بنفسجي */
+    .dashboard-card:nth-child(6) .card-icon { color: #fd7e14; } /* برتقالي */
+    .dashboard-card:nth-child(7) .card-icon { color: #198754; } /* أخضر */
+
+    /* Toast */
     .toast-container {
       position: fixed;
       top: 20px;
@@ -40,65 +53,77 @@
       transform: translateX(-50%);
       z-index: 9999;
     }
+
+    /* الوضع الليلي */
+    body.dark-mode {
+      background: #121212 !important;
+      color: #eaeaea !important;
+    }
+    body.dark-mode .dashboard-card {
+      background: #1e1e1e;
+      color: #eee;
+    }
+    body.dark-mode .dashboard-card a {
+      color: #9bbcff;
+    }
   </style>
 </head>
 <body>
-<div class="text-end mb-3">
+
+<div class="d-flex justify-content-between align-items-center mb-3">
   <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
+  <button id="themeToggle" class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="تبديل الوضع">
+    <i class="bi bi-moon-stars-fill"></i>
+  </button>
 </div>
 
 <div class="container">
   <h2 class="text-center mb-5">لوحة التحكم الرئيسية</h2>
-  <div class="row g-4">
-    <div class="col-md-4">
-      <div class="dashboard-card">
-        <div class="card-icon">➕</div>
+  <div class="row g-4 justify-content-center">
+    <div class="col-sm-6 col-md-4">
+      <div class="dashboard-card" data-bs-toggle="tooltip" title="إضافة فيديو جديد">
+        <div class="card-icon"><i class="bi bi-plus-circle-fill"></i></div>
         <a href="add.html">إضافة فيديو</a>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="dashboard-card">
-        <div class="card-icon">✏️</div>
+    <div class="col-sm-6 col-md-4">
+      <div class="dashboard-card" data-bs-toggle="tooltip" title="تعديل الفيديوهات">
+        <div class="card-icon"><i class="bi bi-pencil-square"></i></div>
         <a href="edit.html">تعديل الفيديوهات</a>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="dashboard-card">
-        <div class="card-icon">📁</div>
+    <div class="col-sm-6 col-md-4">
+      <div class="dashboard-card" data-bs-toggle="tooltip" title="إدارة النسخ الاحتياطية">
+        <div class="card-icon"><i class="bi bi-folder-fill"></i></div>
         <a href="backups.html">النسخ الاحتياطية</a>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="dashboard-card">
-        <div class="card-icon">🏠</div> 
+    <div class="col-sm-6 col-md-4">
+      <div class="dashboard-card" data-bs-toggle="tooltip" title="العودة للصفحة الرئيسية">
+        <div class="card-icon"><i class="bi bi-house-fill"></i></div>
         <a href="index.html">الرئيسية</a>
       </div>
     </div>
-    <!-- كلمات المرور -->
-    <div class="col-md-4">
-      <div class="dashboard-card">
-        <div class="card-icon">🔑</div> 
+    <div class="col-sm-6 col-md-4">
+      <div class="dashboard-card" data-bs-toggle="tooltip" title="إدارة كلمات المرور">
+        <div class="card-icon"><i class="bi bi-key-fill"></i></div>
         <a href="passwords.html">كلمات المرور</a>
       </div>
     </div>
-    <!-- عرض الروابط -->
-    <div class="col-md-4">
-      <div class="dashboard-card">
-        <div class="card-icon">👁️</div> 
+    <div class="col-sm-6 col-md-4">
+      <div class="dashboard-card" data-bs-toggle="tooltip" title="عرض جميع الروابط">
+        <div class="card-icon"><i class="bi bi-eye-fill"></i></div>
         <a href="viewlinks.html">عرض الروابط</a>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="dashboard-card">
-        <div class="card-icon">🔗</div>
+    <div class="col-sm-6 col-md-4">
+      <div class="dashboard-card" data-bs-toggle="tooltip" title="إدارة الروابط">
+        <div class="card-icon"><i class="bi bi-link-45deg"></i></div>
         <a href="links.html">إدارة الروابط</a>
       </div>
     </div>
   </div>
 </div>
-
-<!-- ✅ نافذة تسجيل الدخول -->
-<div id="loginModalContainer"></div>
 
 <!-- ✅ Toast Container -->
 <div class="toast-container" id="toastContainer"></div>
@@ -127,6 +152,24 @@ document.getElementById("logoutBtn").addEventListener("click", () => {
   showToast("تم تسجيل الخروج بنجاح", "success");
   setTimeout(() => window.location.href = "index.html", 1500);
 });
+
+// 🌙 تبديل الوضع الليلي
+const themeToggle = document.getElementById('themeToggle');
+themeToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark-mode');
+  const icon = themeToggle.querySelector("i");
+  if (document.body.classList.contains("dark-mode")) {
+    icon.classList.replace("bi-moon-stars-fill", "bi-brightness-high-fill");
+    showToast("تم تفعيل الوضع الليلي", "info");
+  } else {
+    icon.classList.replace("bi-brightness-high-fill", "bi-moon-stars-fill");
+    showToast("تم تفعيل الوضع النهاري", "info");
+  }
+});
+
+// 📝 تفعيل Tooltips
+var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+tooltipTriggerList.map(el => new bootstrap.Tooltip(el));
 </script>
 
 </body>
