--- a/public/passwords.html
+++ b/public/passwords.html
@@ -2,20 +2,28 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!-- منع الـ zoom على الموبايل -->
   <title>إدارة كلمات المرور</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
-    body { background-color: #f4f6f9; padding: 20px; font-family: 'Segoe UI', sans-serif; }
+    body { background-color: #f4f6f9; padding: 20px; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; }
     .password-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); margin-bottom: 15px; }
     table td, table th { vertical-align: middle; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
+    /* Dark Mode */
+    body.dark-mode { background-color: #121212; color: #eaeaea; }
+    body.dark-mode .password-card, body.dark-mode table { background: #1e1e1e; color: #ddd; }
+    body.dark-mode .table-dark { background-color: #333 !important; }
+    body.dark-mode .modal-content { background: #1e1e1e; color: #fff; }
+    body.dark-mode .btn-close { filter: invert(1); }
   </style>
 </head>
 <body>
- 
+
 <div class="text-end mb-3">
   <button id="dashboardBtn" class="btn btn-secondary me-2">لوحة التحكم</button>
+  <button id="themeToggle" class="btn btn-outline-dark me-2"><i class="bi bi-moon-stars-fill"></i></button>
   <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
 </div>
 
@@ -31,11 +39,11 @@
       <div class="col-md-4">
         <div class="input-group">
           <input type="password" class="form-control" id="password" placeholder="كلمة المرور" required>
-          <button type="button" class="btn btn-outline-secondary" id="togglePassword">👁</button>
+          <button type="button" class="btn btn-outline-secondary" id="togglePassword"><i class="bi bi-eye"></i></button>
         </div>
       </div>
       <div class="col-md-2">
-        <button type="submit" class="btn btn-primary w-100">➕ إضافة</button>
+        <button type="submit" class="btn btn-success w-100">➕ إضافة</button>
       </div>
       <div class="col-md-2">
         <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث...">
@@ -52,7 +60,9 @@
         <th>إجراءات</th>
       </tr>
     </thead>
-    <tbody id="passwordsTable"></tbody>
+    <tbody id="passwordsTable">
+      <tr><td colspan="3" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>
+    </tbody>
   </table>
 </div>
 
@@ -92,9 +102,7 @@
         <h5 class="modal-title">تأكيد الحذف</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
-      <div class="modal-body">
-        هل أنت متأكد أنك تريد حذف هذه الكلمة السرية؟
-      </div>
+      <div class="modal-body">هل أنت متأكد أنك تريد حذف هذه الكلمة السرية؟</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
         <button type="button" class="btn btn-danger" id="confirmDeleteBtn">🗑️ حذف</button>
@@ -116,18 +124,18 @@ const API_URL = '/api/passwords';
 let allPasswords = [];
 let deleteTargetId = null;
 
-// دالة عرض Toast
+// دالة عرض Toast مع أيقونة
 function showToast(message, type="success") {
+  let icon = type === "success" ? "✅" : type === "danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
   toast.className = `toast align-items-center text-bg-${type} border-0 mb-2`;
-  toast.setAttribute('role', 'alert');
   toast.innerHTML = `
     <div class="d-flex">
-      <div class="toast-body">${message}</div>
+      <div class="toast-body">${icon} ${message}</div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
     </div>`;
   document.getElementById('toastContainer').appendChild(toast);
-  new bootstrap.Toast(toast, { delay: 2000 }).show();
+  new bootstrap.Toast(toast, { delay: 2500 }).show();
 }
 
 // تحميل جميع كلمات المرور
@@ -141,26 +149,44 @@ async function loadPasswords() {
 function renderPasswords(list) {
   const table = document.getElementById('passwordsTable');
   table.innerHTML = '';
+  if (!list.length) {
+    table.innerHTML = `<tr><td colspan="3" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>`;
+    return;
+  }
   list.forEach(p => {
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td>${p.section}</td>
       <td>
-        <input type="password" value="${p.password}" class="form-control form-control-sm pw-field" readonly>
-        <button class="btn btn-sm btn-link toggle-pw">👁</button>
+        <div class="d-flex align-items-center">
+          <input type="password" value="${p.password}" class="form-control form-control-sm me-2 pw-field" readonly>
+          <button class="btn btn-sm btn-outline-secondary toggle-pw"><i class="bi bi-eye"></i></button>
+          <button class="btn btn-sm btn-outline-success ms-1 copy-pw"><i class="bi bi-clipboard"></i></button>
+        </div>
       </td>
       <td>
-        <button class="btn btn-warning btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
+        <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
         <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')">🗑️ حذف</button>
       </td>
     `;
     table.appendChild(tr);
   });
 
+  // 👁 إظهار/إخفاء كلمة المرور مع إخفاء تلقائي بعد 5 ثوانٍ
   document.querySelectorAll('.toggle-pw').forEach(btn => {
     btn.addEventListener('click', e => {
       const input = e.target.closest('td').querySelector('.pw-field');
-      input.type = input.type === 'password' ? 'text' : 'password';
+      input.type = 'text';
+      setTimeout(() => { input.type = 'password'; }, 5000);
+    });
+  });
+
+  // 📋 نسخ كلمة المرور
+  document.querySelectorAll('.copy-pw').forEach(btn => {
+    btn.addEventListener('click', e => {
+      const input = e.target.closest('td').querySelector('.pw-field');
+      navigator.clipboard.writeText(input.value);
+      showToast("📋 تم نسخ كلمة المرور", "info");
     });
   });
 }
@@ -210,7 +236,7 @@ function confirmDelete(id) {
   new bootstrap.Modal(document.getElementById('confirmDeleteModal')).show();
 }
 
-// تنفيذ الحذف بعد التأكيد
+// تنفيذ الحذف
 document.getElementById('confirmDeleteBtn').addEventListener('click', async () => {
   if (deleteTargetId) {
     await fetch(`${API_URL}/${deleteTargetId}`, { method: 'DELETE' });
@@ -224,11 +250,13 @@ document.getElementById('confirmDeleteBtn').addEventListener('click', async () =
 // فلترة
 document.getElementById('searchBox').addEventListener('input', e => {
   const query = e.target.value.toLowerCase();
-  const filtered = allPasswords.filter(p => p.section.toLowerCase().includes(query));
+  const filtered = allPasswords.filter(p => 
+    p.section.toLowerCase().includes(query) || p.password.toLowerCase().includes(query)
+  );
   renderPasswords(filtered);
 });
 
-// زر عرض/إخفاء كلمة المرور في النموذج
+// زر إظهار/إخفاء كلمة المرور في نموذج الإضافة
 document.getElementById('togglePassword').addEventListener('click', () => {
   const pwField = document.getElementById('password');
   pwField.type = pwField.type === 'password' ? 'text' : 'password';
@@ -239,16 +267,34 @@ document.getElementById("dashboardBtn").addEventListener("click", () => {
   window.location.href = "dashboard.html";
 });
 
-// تسجيل الخروج مع Toast والتوجيه بعد 1.5 ثانية
+// تسجيل الخروج
 document.getElementById("logoutBtn").addEventListener("click", () => {
   sessionStorage.removeItem("loggedInAt_passwords");
   showToast("✅ تم تسجيل الخروج بنجاح", "success");
-  setTimeout(() => {
-    window.location.href = "index.html";
-  }, 1500);
+  setTimeout(() => { window.location.href = "index.html"; }, 1500);
 });
 
-loadPasswords();
+// Dark Mode toggle
+document.getElementById("themeToggle").addEventListener("click", () => {
+  document.body.classList.toggle("dark-mode");
+  const icon = document.querySelector("#themeToggle i");
+  if (document.body.classList.contains("dark-mode")) {
+    icon.classList.replace("bi-moon-stars-fill", "bi-brightness-high-fill");
+  } else {
+    icon.classList.replace("bi-brightness-high-fill", "bi-moon-stars-fill");
+  }
+});
+
+// ✅ معالجة zoom في الموبايل عند تسجيل الدخول
+function resetZoom() {
+  document.querySelector("meta[name=viewport]").setAttribute("content","width=device-width, initial-scale=1, maximum-scale=1");
+}
+
+// عند إدخال كلمة مرور صحيحة → رجع الصفحة للوضع الطبيعي
+document.addEventListener("DOMContentLoaded", () => {
+  resetZoom();
+  loadPasswords();
+});
 </script>
 </body>
 </html>
