--- a/public/passwords.html
+++ b/public/passwords.html
@@ -2,12 +2,12 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!-- منع الـ zoom على الموبايل -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>إدارة كلمات المرور</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
-    body { background-color: #f4f6f9; padding: 20px; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; }
+    body { background-color: #f4f6f9; padding: 20px; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; font-size:16px; }
     .password-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); margin-bottom: 15px; }
     table td, table th { vertical-align: middle; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
@@ -21,10 +21,14 @@
 </head>
 <body>
 
-<div class="text-end mb-3">
-  <button id="dashboardBtn" class="btn btn-secondary me-2">لوحة التحكم</button>
-  <button id="themeToggle" class="btn btn-outline-dark me-2"><i class="bi bi-moon-stars-fill"></i></button>
-  <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
+<div class="d-flex justify-content-between mb-3">
+  <div>
+    <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
+    <button id="dashboardBtn" class="btn btn-secondary" data-bs-toggle="tooltip" title="العودة للوحة التحكم"><i class="bi bi-speedometer2"></i></button>
+  </div>
+  <div>
+    <button id="themeToggle" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="الوضع الليلي/النهاري"><i class="bi bi-moon-stars-fill"></i></button>
+  </div>
 </div>
 
 <div class="container">
@@ -34,19 +38,19 @@
   <div class="password-card">
     <form id="addPasswordForm" class="row g-3">
       <div class="col-md-4">
-        <input type="text" class="form-control" id="section" placeholder="اسم القسم أو الجزء" required>
+        <input type="text" class="form-control" id="section" placeholder="اسم القسم أو الجزء" required data-bs-toggle="tooltip" title="أدخل اسم القسم">
       </div>
       <div class="col-md-4">
         <div class="input-group">
-          <input type="password" class="form-control" id="password" placeholder="كلمة المرور" required>
-          <button type="button" class="btn btn-outline-secondary" id="togglePassword"><i class="bi bi-eye"></i></button>
+          <input type="password" class="form-control" id="password" placeholder="كلمة المرور" required data-bs-toggle="tooltip" title="أدخل كلمة المرور">
+          <button type="button" class="btn btn-outline-secondary" id="togglePassword" data-bs-toggle="tooltip" title="إظهار/إخفاء كلمة المرور"><i class="bi bi-eye"></i></button>
         </div>
       </div>
       <div class="col-md-2">
-        <button type="submit" class="btn btn-success w-100">➕ إضافة</button>
+        <button type="submit" class="btn btn-success w-100" data-bs-toggle="tooltip" title="إضافة كلمة مرور جديدة">➕ إضافة</button>
       </div>
       <div class="col-md-2">
-        <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث...">
+        <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث..." data-bs-toggle="tooltip" title="ابحث عن كلمة مرور">
       </div>
     </form>
   </div>
@@ -124,7 +128,12 @@ const API_URL = '/api/passwords';
 let allPasswords = [];
 let deleteTargetId = null;
 
-// دالة عرض Toast مع أيقونة
+// ✅ تفعيل tooltips
+document.addEventListener("DOMContentLoaded", () => {
+  [...document.querySelectorAll('[data-bs-toggle="tooltip"]')].forEach(el => new bootstrap.Tooltip(el));
+});
+
+// ✅ Toast
 function showToast(message, type="success") {
   let icon = type === "success" ? "✅" : type === "danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
@@ -138,11 +147,27 @@ function showToast(message, type="success") {
   new bootstrap.Toast(toast, { delay: 2500 }).show();
 }
 
+// ✅ معالجة zoom في الموبايل
+function resetZoom() {
+  document.querySelector("meta[name=viewport]").setAttribute(
+    "content","width=device-width, initial-scale=1, maximum-scale=1"
+  );
+}
+
 // تحميل جميع كلمات المرور
 async function loadPasswords() {
-  const res = await fetch(API_URL);
-  allPasswords = await res.json();
-  renderPasswords(allPasswords);
+  try {
+    const res = await fetch(API_URL);
+    if(res.status === 401) {
+      showToast("❌ كلمة المرور غير صحيحة", "danger");
+      return;
+    }
+    allPasswords = await res.json();
+    renderPasswords(allPasswords);
+    resetZoom(); // استرجاع العرض الطبيعي بعد تسجيل الدخول الصحيح
+  } catch {
+    showToast("❌ خطأ في تحميل البيانات", "danger");
+  }
 }
 
 // عرض الجدول
@@ -160,19 +185,19 @@ function renderPasswords(list) {
       <td>
         <div class="d-flex align-items-center">
           <input type="password" value="${p.password}" class="form-control form-control-sm me-2 pw-field" readonly>
-          <button class="btn btn-sm btn-outline-secondary toggle-pw"><i class="bi bi-eye"></i></button>
-          <button class="btn btn-sm btn-outline-success ms-1 copy-pw"><i class="bi bi-clipboard"></i></button>
+          <button class="btn btn-sm btn-outline-secondary toggle-pw" data-bs-toggle="tooltip" title="إظهار كلمة المرور"><i class="bi bi-eye"></i></button>
+          <button class="btn btn-sm btn-outline-success ms-1 copy-pw" data-bs-toggle="tooltip" title="نسخ كلمة المرور"><i class="bi bi-clipboard"></i></button>
         </div>
       </td>
       <td>
-        <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
-        <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')">🗑️ حذف</button>
+        <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')" data-bs-toggle="tooltip" title="تعديل">✏️ تعديل</button>
+        <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')" data-bs-toggle="tooltip" title="حذف">🗑️ حذف</button>
       </td>
     `;
     table.appendChild(tr);
   });
 
-  // 👁 إظهار/إخفاء كلمة المرور مع إخفاء تلقائي بعد 5 ثوانٍ
+  // 👁 إظهار/إخفاء كلمة المرور
   document.querySelectorAll('.toggle-pw').forEach(btn => {
     btn.addEventListener('click', e => {
       const input = e.target.closest('td').querySelector('.pw-field');
@@ -206,14 +231,6 @@ document.getElementById('addPasswordForm').addEventListener('submit', async (e) 
   loadPasswords();
 });
 
-// فتح نافذة التعديل
-function openEditModal(id, section, password) {
-  document.getElementById('editId').value = id;
-  document.getElementById('editSection').value = section;
-  document.getElementById('editPassword').value = password;
-  new bootstrap.Modal(document.getElementById('editModal')).show();
-}
-
 // تعديل كلمة مرور
 document.getElementById('editPasswordForm').addEventListener('submit', async (e) => {
   e.preventDefault();
@@ -230,13 +247,19 @@ document.getElementById('editPasswordForm').addEventListener('submit', async (e)
   bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
 });
 
-// فتح نافذة تأكيد الحذف
+// فتح نافذة التعديل
+function openEditModal(id, section, password) {
+  document.getElementById('editId').value = id;
+  document.getElementById('editSection').value = section;
+  document.getElementById('editPassword').value = password;
+  new bootstrap.Modal(document.getElementById('editModal')).show();
+}
+
+// حذف
 function confirmDelete(id) {
   deleteTargetId = id;
   new bootstrap.Modal(document.getElementById('confirmDeleteModal')).show();
 }
-
-// تنفيذ الحذف
 document.getElementById('confirmDeleteBtn').addEventListener('click', async () => {
   if (deleteTargetId) {
     await fetch(`${API_URL}/${deleteTargetId}`, { method: 'DELETE' });
@@ -274,27 +297,18 @@ document.getElementById("logoutBtn").addEventListener("click", () => {
   setTimeout(() => { window.location.href = "index.html"; }, 1500);
 });
 
-// Dark Mode toggle
+// تبديل الوضع الليلي
 document.getElementById("themeToggle").addEventListener("click", () => {
   document.body.classList.toggle("dark-mode");
   const icon = document.querySelector("#themeToggle i");
   if (document.body.classList.contains("dark-mode")) {
-    icon.classList.replace("bi-moon-stars-fill", "bi-brightness-high-fill");
+    icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");
   } else {
-    icon.classList.replace("bi-brightness-high-fill", "bi-moon-stars-fill");
+    icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");
   }
 });
 
-// ✅ معالجة zoom في الموبايل عند تسجيل الدخول
-function resetZoom() {
-  document.querySelector("meta[name=viewport]").setAttribute("content","width=device-width, initial-scale=1, maximum-scale=1");
-}
-
-// عند إدخال كلمة مرور صحيحة → رجع الصفحة للوضع الطبيعي
-document.addEventListener("DOMContentLoaded", () => {
-  resetZoom();
-  loadPasswords();
-});
+document.addEventListener("DOMContentLoaded", loadPasswords);
 </script>
 </body>
 </html>
