--- a/public/passwords.html
+++ b/public/passwords.html
@@ -9,14 +9,27 @@
   <style>
     body { background-color: #f4f6f9; padding: 20px; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; font-size:16px; }
     .password-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); margin-bottom: 15px; }
-    table td, table th { vertical-align: middle; }
+    table td, table th { vertical-align: middle; white-space: nowrap; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
+    /* عمود الرقم Sticky */
+    th.sticky-col, td.sticky-col {
+      position: sticky;
+      right: 0;
+      background: #fff;
+      z-index: 2;
+    }
+    thead th.sticky-col {
+      background: #212529; /* لون هيدر الجدول الداكن */
+      color: #fff;
+      z-index: 3;
+    }
     /* Dark Mode */
     body.dark-mode { background-color: #121212; color: #eaeaea; }
     body.dark-mode .password-card, body.dark-mode table { background: #1e1e1e; color: #ddd; }
     body.dark-mode .table-dark { background-color: #333 !important; }
     body.dark-mode .modal-content { background: #1e1e1e; color: #fff; }
     body.dark-mode .btn-close { filter: invert(1); }
+    body.dark-mode td.sticky-col { background: #1e1e1e; }
   </style>
 </head>
 <body>
@@ -56,18 +69,21 @@
   </div>
 
   <!-- الجدول -->
-  <table class="table table-bordered table-striped mt-4">
-    <thead class="table-dark">
-      <tr>
-        <th>القسم</th>
-        <th>كلمة المرور</th>
-        <th>إجراءات</th>
-      </tr>
-    </thead>
-    <tbody id="passwordsTable">
-      <tr><td colspan="3" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped mt-4">
+      <thead class="table-dark">
+        <tr>
+          <th class="sticky-col" style="width:50px">#</th>
+          <th>القسم</th>
+          <th>كلمة المرور</th>
+          <th>إجراءات</th>
+        </tr>
+      </thead>
+      <tbody id="passwordsTable">
+        <tr><td colspan="4" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <!-- نافذة تعديل -->
@@ -117,7 +133,6 @@
 
 <!-- Toast -->
 <div class="toast-container" id="toastContainer"></div>
-
 <!-- ✅ نافذة تسجيل الدخول -->
 <div id="loginModalContainer"></div>
 
@@ -128,18 +143,15 @@ const API_URL = '/api/passwords';
 let allPasswords = [];
 let deleteTargetId = null;
 
-// ✅ تفعيل tooltips
 document.addEventListener("DOMContentLoaded", () => {
   [...document.querySelectorAll('[data-bs-toggle="tooltip"]')].forEach(el => new bootstrap.Tooltip(el));
 });
 
-// ✅ Toast
 function showToast(message, type="success") {
   let icon = type === "success" ? "✅" : type === "danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
   toast.className = `toast align-items-center text-bg-${type} border-0 mb-2`;
-  toast.innerHTML = `
-    <div class="d-flex">
+  toast.innerHTML = `<div class="d-flex">
       <div class="toast-body">${icon} ${message}</div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
     </div>`;
@@ -147,40 +159,31 @@ function showToast(message, type="success") {
   new bootstrap.Toast(toast, { delay: 2500 }).show();
 }
 
-// ✅ معالجة zoom في الموبايل
 function resetZoom() {
-  document.querySelector("meta[name=viewport]").setAttribute(
-    "content","width=device-width, initial-scale=1, maximum-scale=1"
-  );
+  document.querySelector("meta[name=viewport]").setAttribute("content","width=device-width, initial-scale=1, maximum-scale=1");
 }
 
-// تحميل جميع كلمات المرور
 async function loadPasswords() {
   try {
     const res = await fetch(API_URL);
-    if(res.status === 401) {
-      showToast("❌ كلمة المرور غير صحيحة", "danger");
-      return;
-    }
+    if(res.status === 401) { showToast("❌ كلمة المرور غير صحيحة", "danger"); return; }
     allPasswords = await res.json();
     renderPasswords(allPasswords);
-    resetZoom(); // استرجاع العرض الطبيعي بعد تسجيل الدخول الصحيح
-  } catch {
-    showToast("❌ خطأ في تحميل البيانات", "danger");
-  }
+    resetZoom();
+  } catch { showToast("❌ خطأ في تحميل البيانات", "danger"); }
 }
 
-// عرض الجدول
 function renderPasswords(list) {
   const table = document.getElementById('passwordsTable');
   table.innerHTML = '';
   if (!list.length) {
-    table.innerHTML = `<tr><td colspan="3" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>`;
+    table.innerHTML = `<tr><td colspan="4" class="text-center text-muted">🚫 لا توجد كلمات مرور مسجلة</td></tr>`;
     return;
   }
-  list.forEach(p => {
+  list.forEach((p, index) => {
     const tr = document.createElement('tr');
     tr.innerHTML = `
+      <td class="sticky-col">${index + 1}</td>
       <td>${p.section}</td>
       <td>
         <div class="d-flex align-items-center">
@@ -192,21 +195,17 @@ function renderPasswords(list) {
       <td>
         <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')" data-bs-toggle="tooltip" title="تعديل">✏️ تعديل</button>
         <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')" data-bs-toggle="tooltip" title="حذف">🗑️ حذف</button>
-      </td>
-    `;
+      </td>`;
     table.appendChild(tr);
   });
 
-  // 👁 إظهار/إخفاء كلمة المرور
   document.querySelectorAll('.toggle-pw').forEach(btn => {
     btn.addEventListener('click', e => {
       const input = e.target.closest('td').querySelector('.pw-field');
-      input.type = 'text';
-      setTimeout(() => { input.type = 'password'; }, 5000);
+      input.type = 'text'; setTimeout(() => { input.type = 'password'; }, 5000);
     });
   });
 
-  // 📋 نسخ كلمة المرور
   document.querySelectorAll('.copy-pw').forEach(btn => {
     btn.addEventListener('click', e => {
       const input = e.target.closest('td').querySelector('.pw-field');
@@ -216,98 +215,57 @@ function renderPasswords(list) {
   });
 }
 
-// إضافة كلمة مرور
 document.getElementById('addPasswordForm').addEventListener('submit', async (e) => {
   e.preventDefault();
   const section = document.getElementById('section').value;
   const password = document.getElementById('password').value;
-  await fetch(API_URL, {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ section, password })
-  });
-  e.target.reset();
-  showToast("✅ تم إضافة كلمة المرور بنجاح");
-  loadPasswords();
+  await fetch(API_URL,{ method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({ section, password }) });
+  e.target.reset(); showToast("✅ تم إضافة كلمة المرور بنجاح"); loadPasswords();
 });
 
-// تعديل كلمة مرور
 document.getElementById('editPasswordForm').addEventListener('submit', async (e) => {
   e.preventDefault();
-  const id = document.getElementById('editId').value;
-  const section = document.getElementById('editSection').value;
-  const password = document.getElementById('editPassword').value;
-  await fetch(`${API_URL}/${id}`, {
-    method: 'PUT',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ section, password })
-  });
-  showToast("✏️ تم تعديل كلمة المرور");
-  loadPasswords();
+  const id=document.getElementById('editId').value;
+  const section=document.getElementById('editSection').value;
+  const password=document.getElementById('editPassword').value;
+  await fetch(`${API_URL}/${id}`,{ method:'PUT', headers:{'Content-Type':'application/json'}, body:JSON.stringify({ section, password }) });
+  showToast("✏️ تم تعديل كلمة المرور"); loadPasswords();
   bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
 });
 
-// فتح نافذة التعديل
 function openEditModal(id, section, password) {
-  document.getElementById('editId').value = id;
-  document.getElementById('editSection').value = section;
-  document.getElementById('editPassword').value = password;
+  document.getElementById('editId').value=id;
+  document.getElementById('editSection').value=section;
+  document.getElementById('editPassword').value=password;
   new bootstrap.Modal(document.getElementById('editModal')).show();
 }
 
-// حذف
 function confirmDelete(id) {
-  deleteTargetId = id;
+  deleteTargetId=id;
   new bootstrap.Modal(document.getElementById('confirmDeleteModal')).show();
 }
 document.getElementById('confirmDeleteBtn').addEventListener('click', async () => {
-  if (deleteTargetId) {
-    await fetch(`${API_URL}/${deleteTargetId}`, { method: 'DELETE' });
-    showToast("🗑️ تم الحذف بنجاح", "danger");
-    loadPasswords();
-    bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal')).hide();
-    deleteTargetId = null;
+  if(deleteTargetId){
+    await fetch(`${API_URL}/${deleteTargetId}`,{method:'DELETE'});
+    showToast("🗑️ تم الحذف بنجاح","danger"); loadPasswords();
+    bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal')).hide(); deleteTargetId=null;
   }
 });
 
-// فلترة
 document.getElementById('searchBox').addEventListener('input', e => {
-  const query = e.target.value.toLowerCase();
-  const filtered = allPasswords.filter(p => 
-    p.section.toLowerCase().includes(query) || p.password.toLowerCase().includes(query)
-  );
+  const query=e.target.value.toLowerCase();
+  const filtered=allPasswords.filter(p => p.section.toLowerCase().includes(query)||p.password.toLowerCase().includes(query));
   renderPasswords(filtered);
 });
 
-// زر إظهار/إخفاء كلمة المرور في نموذج الإضافة
 document.getElementById('togglePassword').addEventListener('click', () => {
-  const pwField = document.getElementById('password');
-  pwField.type = pwField.type === 'password' ? 'text' : 'password';
+  const pwField=document.getElementById('password');
+  pwField.type=pwField.type==="password"?"text":"password";
 });
 
-// زر لوحة التحكم
-document.getElementById("dashboardBtn").addEventListener("click", () => {
-  window.location.href = "dashboard.html";
-});
-
-// تسجيل الخروج
-document.getElementById("logoutBtn").addEventListener("click", () => {
-  sessionStorage.removeItem("loggedInAt_passwords");
-  showToast("✅ تم تسجيل الخروج بنجاح", "success");
-  setTimeout(() => { window.location.href = "index.html"; }, 1500);
-});
-
-// تبديل الوضع الليلي
-document.getElementById("themeToggle").addEventListener("click", () => {
-  document.body.classList.toggle("dark-mode");
-  const icon = document.querySelector("#themeToggle i");
-  if (document.body.classList.contains("dark-mode")) {
-    icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");
-  } else {
-    icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");
-  }
-});
-
+document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
+document.getElementById("logoutBtn").addEventListener("click",()=>{sessionStorage.removeItem("loggedInAt_passwords");showToast("✅ تم تسجيل الخروج بنجاح","success");setTimeout(()=>{window.location.href="index.html";},1500);});
+document.getElementById("themeToggle").addEventListener("click",()=>{document.body.classList.toggle("dark-mode");const icon=document.querySelector("#themeToggle i");if(document.body.classList.contains("dark-mode")){icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");}else{icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");}});
 document.addEventListener("DOMContentLoaded", loadPasswords);
 </script>
 </body>
