--- a/public/passwords.html
+++ b/public/passwords.html
@@ -12,17 +12,8 @@
     table td, table th { vertical-align: middle; white-space: nowrap; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
     /* عمود الرقم Sticky */
-    th.sticky-col, td.sticky-col {
-      position: sticky;
-      right: 0;
-      background: #fff;
-      z-index: 2;
-    }
-    thead th.sticky-col {
-      background: #212529; /* لون هيدر الجدول الداكن */
-      color: #fff;
-      z-index: 3;
-    }
+    th.sticky-col, td.sticky-col { position: sticky; right: 0; background: #fff; z-index: 2; }
+    thead th.sticky-col { background: #212529; color: #fff; z-index: 3; }
     /* Dark Mode */
     body.dark-mode { background-color: #121212; color: #eaeaea; }
     body.dark-mode .password-card, body.dark-mode table { background: #1e1e1e; color: #ddd; }
@@ -66,6 +57,14 @@
         <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث..." data-bs-toggle="tooltip" title="ابحث عن كلمة مرور">
       </div>
     </form>
+  </div>
+
+  <!-- Spinner -->
+  <div id="loadingSpinner" class="text-center my-4" style="display:none;">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">جاري التحميل...</span>
+    </div>
+    <p class="mt-2">⏳ جاري التحميل...</p>
   </div>
 
   <!-- الجدول -->
@@ -164,13 +163,19 @@ function resetZoom() {
 }
 
 async function loadPasswords() {
+  document.getElementById("loadingSpinner").style.display = "block";
+  document.getElementById("passwordsTable").innerHTML = "";
   try {
     const res = await fetch(API_URL);
     if(res.status === 401) { showToast("❌ كلمة المرور غير صحيحة", "danger"); return; }
     allPasswords = await res.json();
     renderPasswords(allPasswords);
     resetZoom();
-  } catch { showToast("❌ خطأ في تحميل البيانات", "danger"); }
+  } catch {
+    showToast("❌ خطأ في تحميل البيانات", "danger");
+  } finally {
+    document.getElementById("loadingSpinner").style.display = "none";
+  }
 }
 
 function renderPasswords(list) {
