--- a/public/passwords.html
+++ b/public/passwords.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>إدارة كلمات المرور</title>
-  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
@@ -22,9 +21,29 @@
     body.dark-mode .modal-content { background: #1e1e1e; color: #fff; }
     body.dark-mode .btn-close { filter: invert(1); }
     body.dark-mode td.sticky-col { background: #1e1e1e; }
+    /* شاشة التحميل */
+    #loadingOverlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 2000;
+      color: #fff;
+      font-size: 1.2rem;
+    }
   </style>
 </head>
 <body>
+
+<!-- شاشة التحميل -->
+<div id="loadingOverlay">
+  <div class="spinner-border text-light" role="status" style="width:3rem; height:3rem;"></div>
+  <p class="mt-3">⏳ جاري التحميل...</p>
+</div>
 
 <div class="d-flex justify-content-between mb-3">
   <div>
@@ -58,14 +77,6 @@
         <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث..." data-bs-toggle="tooltip" title="ابحث عن كلمة مرور">
       </div>
     </form>
-  </div>
-
-  <!-- Spinner -->
-  <div id="loadingSpinner" class="text-center my-4" style="display:none;">
-    <div class="spinner-border text-primary" role="status">
-      <span class="visually-hidden">جاري التحميل...</span>
-    </div>
-    <p class="mt-2">⏳ جاري التحميل...</p>
   </div>
 
   <!-- الجدول -->
@@ -143,10 +154,6 @@ const API_URL = '/api/passwords';
 let allPasswords = [];
 let deleteTargetId = null;
 
-document.addEventListener("DOMContentLoaded", () => {
-  [...document.querySelectorAll('[data-bs-toggle="tooltip"]')].forEach(el => new bootstrap.Tooltip(el));
-});
-
 function showToast(message, type="success") {
   let icon = type === "success" ? "✅" : type === "danger" ? "❌" : "ℹ️";
   const toast = document.createElement('div');
@@ -164,8 +171,7 @@ function resetZoom() {
 }
 
 async function loadPasswords() {
-  document.getElementById("loadingSpinner").style.display = "block";
-  document.getElementById("passwordsTable").innerHTML = "";
+  document.getElementById("loadingOverlay").style.display = "flex";
   try {
     const res = await fetch(API_URL);
     if(res.status === 401) { showToast("❌ كلمة المرور غير صحيحة", "danger"); return; }
@@ -175,7 +181,7 @@ async function loadPasswords() {
   } catch {
     showToast("❌ خطأ في تحميل البيانات", "danger");
   } finally {
-    document.getElementById("loadingSpinner").style.display = "none";
+    document.getElementById("loadingOverlay").style.display = "none";
   }
 }
 
