--- a/public/passwords.html
+++ b/public/passwords.html
@@ -34,7 +34,7 @@
 <!-- شاشة التحميل -->
 <div id="loadingOverlay">
   <div class="spinner-border text-light" role="status" style="width:3rem; height:3rem;"></div>
-  <p class="mt-3">⏳ جاري التحميل...</p>
+  <p class="mt-3"> جاري التحميل...⏳</p>
 </div>
 
 <!-- ✅ محتوى الصفحة -->
