--- a/public/passwords.html
+++ b/public/passwords.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
-    body { background-color: #f4f6f9; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; font-size:16px; }
+    body { background-color: #f4f6f9; font-family: 'Segoe UI', sans-serif; transition: background 0.3s, color 0.3s; font-size:16px; padding:20px; }
     .password-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); margin-bottom: 15px; }
     table td, table th { vertical-align: middle; white-space: nowrap; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
@@ -40,7 +40,7 @@
 <!-- ✅ محتوى الصفحة -->
 <div id="pageContent">
 
-  <div class="d-flex justify-content-between mb-3">
+  <div class="d-flex justify-content-between mb-3 mt-3">
     <div>
       <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
       <button id="dashboardBtn" class="btn btn-secondary" data-bs-toggle="tooltip" title="العودة للوحة التحكم"><i class="bi bi-speedometer2"></i></button>
